# near-erc20-bridge

./: .gitignore  Cargo.toml  Makefile  README.md  package.json
deployments/testnet/: BridgeAssist.txt  Token.txt
integration-tests/: package.json
integration-tests/src/: main.ava.ts
res/: near_bridge_assist.wasm
scripts/: deploy.sh  deploy_ft.sh
src/: lib.rs
