[package]
name = "near-bridge-assist"
version = "1.0.0"
authors = ["Evgeniy Lebedev"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"
uint = { version = "0.9.3", default-features = false }
bincode = "1.0"
ed25519-dalek = "1.0.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
